<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QRganize</string>
    <color name="background">#23272e</color>
    <string name="box_delete_successful">Box successfully deleted</string>
    <string name="no_box_delete">The box won\'t be deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="box_delete_confirm">"Are you sure you want to delete the box "</string>
    <string name="product_delete_successful">Product successfully deleted</string>
    <string name="no_product_delete">Product won\'t be deleted</string>
    <string name="no_account_delete">The account won\'t be deleted</string>
    <string name="account_delete_successful">The account has been deleted successfully</string>
    <string name="account_delete_error">It\'s not possible to delete the account</string>
    <string name="error_please_try_again">An error occurred, please try again</string>
    <string name="please_wait">Please wait...</string>
    <string name="mandatory_picture_to_create">Profile picture is mandatory to create the account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="box_create_successful">Box created successfully</string>
    <string name="please_refresh">Please refresh the page</string>
    <string name="check_email">Please check your e-mail</string>
    <string name="email_not_valid">The inserted e-mail isn\'t valid</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="enter_your_mail">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="logging_in">Logging in...</string>
    <string name="check_credentials">Please check if your e-mail and password are correct</string>
    <string name="no_session_end">The session won\'t end</string>
    <string name="session_end">The session ended</string>
    <string name="password_confirm">Confirm your password</string>
    <string name="eight_password">The password must have 8 characters</string>
    <string name="registering_wait">Registering, please wait...</string>
    <string name="saving_image">Saving image, please wait...</string>
    <string name="data_success_changed_refresh">Data successfully modified, please refresh the page</string>
    <string name="ok">OK</string>
    <string name="password_changed">Password changed</string>
    <string name="passwords_dont_match">The passwords don\'t match</string>
    <string name="wrong_password">Wrong password</string>
    <string name="email_changed">E-mail changed successfully</string>
    <string name="email_use_please_try">E-mail already in use, please try another</string>
    <string name="home">Home</string>
    <string name="scan_qr">Scan QR</string>
    <string name="profile">Profile</string>
    <string name="product_delete_confirm">"Are you sure you want to delete the box "</string>
    <string name="enter_password">Enter the password</string>
    <string name="enter_box_name">Enter box name</string>
    <string name="enter_box_type">Enter box type</string>
    <string name="enter_box_location">Enter box location</string>
    <string name="product_create_sucessful">Product created successfully</string>
    <string name="no_exist_box_try">Non-existing box, try again</string>
    <string name="mandatory_product_to_create">Product picture is mandatory to create the product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_type">Enter product type</string>
    <string name="enter_product_quantity">Enter product quantity</string>
    <string name="enter_product_color">Enter product color</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_email">Change e-mail</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Log out</string>
    <string name="swipe_continue">Swipe to continue</string>
    <string name="details">Details</string>
    <string name="password">Password</string>
    <string name="change">Change</string>
    <string name="new_email">New e-mail</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account_delete">Are you sure you want to delete your account?</string>
    <string name="edit_box">Edit box</string>
    <string name="box_name">Box name</string>
    <string name="box_type">Box type</string>
    <string name="box_local">Box location</string>
    <string name="edit">Edit</string>
    <string name="edit_product">Edit product</string>
    <string name="product_name">Product name</string>
    <string name="product_type">Product type</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_color">Product color</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password_recover">Recover password</string>
    <string name="create_your_box">Create your box</string>
    <string name="create_box_begin">Create a box to begin</string>
    <string name="back">Back</string>
    <string name="product_picture">Product picture</string>
    <string name="options">Options</string>
    <string name="boxes">Boxes:</string>
    <string name="user_since">User since:</string>
    <string name="qr_focus">Focus the QR code</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="sure_logout">Are you sure you want to log out?</string>
    <string name="start_adventure">Start or continue your adventure</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="organize_text">Organize the items you want, putting them in boxes and generating QR codes to organize yourself</string>
    <string name="organize_text1">Put products inside the boxes, so that you can see where they are</string>
    <string name="organize_profile">Access all boxes and QR codes connected to your profile through any android device with QRganize installed</string>
    <string name="organize_profile1">To know more and enjoy, enter and QRganize yourself</string>
    <string name="with_this_app">With this application you can:</string>
    <string name="with_profile">Through the profile you can:</string>
    <string name="start">Start</string>
    <string name="no_found_email">The inserted e-mail doesn\'t exist, please try again</string>
    <string name="internet_access_no">To continue, you must have internet connection</string>
    <string name="by_terms">By registering, you accept the Terms and Conditions of Use</string>
    <string name="terms_title">Terms and Conditions of Use</string>
    <string name="terms_message">Under the General Data Protection Regulation, no information entered by the user will be made available to third parties or used for marketing campaigns.\nAny type of data provided by the user will only concern the user, with no external access.</string>
    <string name="about_message">Hello, my name is Henrique Leote and I\'m responsible for this app. The Qrganize app was developed in the Android Studio software within the scope of the Professional Aptitude Project of the Professional Course of Technician in Computer Systems Management and Programming.</string>
    <string name="about_app">About the app</string>
    <string name="my_boxes">My boxes</string>
    <string name="products">Products</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="product_description">Product description</string>
    <string name="delete_box">Delete box</string>
    <string name="delete_product">Delete product</string>
    <string name="save_gallery">Save QR in gallery</string>
    <string name="share">Share QR</string>
    <string name="successful_save">"Successfully saved in: "</string>
    <string name="grant_try_again">Please grant permissions and try again</string>
    <string name="all_permission_needed">All requested permissions are required</string>
    <string name="needed_permissions">Permissions are required</string>
    <string name="product">Product</string>
    <string name="sure_delete_box">Tem a certeza que deseja eliminar a caixa?</string>
    <string name="sure_delete_product">Are you sure you want to delete the product?</string>

</resources>
