<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_close_black_24dp" />

    <TextView
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/novecentosanswide_demibold"
        android:text="@string/delete_box"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tt2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tt"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/novecentosanswide_normal"
        android:gravity="center"
        android:text="@string/sure_delete_box"
        android:textColor="#000000"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tt2"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/No"
                android:layout_alignParentLeft="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/custom_button_background"
                android:fontFamily="@font/novecentosanswide_demibold"
                android:text="@string/no"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/Yes"
                android:layout_alignParentRight="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_outline2"
                android:fontFamily="@font/novecentosanswide_demibold"
                android:text="@string/yes"
                android:textColor="#000000"
                 />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
